frame/support/test/tests/benchmark_ui/dup_extrinsic_call.stderr
error: Only one #[extrinsic_call] or #[block] attribute is allowed per benchmark.
  --> tests/benchmark_ui/dup_extrinsic_call.rs:14:3
   |
14 |         #[extrinsic_call]
   |         ^
